<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:theme="@style/ProfileTheme"
    tools:context=".ReminderActivity">


    <Button
        android:id="@+id/reset_button_rem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/button_shape_createprofile"
        android:text="Reset"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slider_rem"
        tools:layout_conversion_absoluteHeight="0dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_shape_profile"
        android:text="@string/home"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/save_btn_rem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_shape_createprofile"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slider_rem"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editReminderMsg"
        android:layout_width="357dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/reminder"
        android:maxLength="24"
        android:textColor="#FFFFFF"
        android:textColorHint="#CCCCCC"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtScreen" />

    <TextView
        android:id="@+id/txtScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="152dp"
        android:text="Reminder"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTimerSlider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="68dp"
        android:text="@string/reminder_msg"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editReminderMsg"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_rem"
        android:layout_width="332dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        app:labelBehavior="visible"
        android:stepSize="15"
        android:value="360"
        android:valueFrom="60"
        android:valueTo="360"
        app:haloColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTimerSlider"
        app:thumbColor="#FFFFFF"
        app:thumbStrokeColor="#FFFFFF"
        app:tickColor="#FFFFFF"
        app:tickColorActive="#FFFFFF"
        app:tickColorInactive="#FFFFFF"
        app:trackColor="#FFFFFF" />

    <Button
        android:id="@+id/save_btn_motivation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_shape_createprofile"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motivation_slider"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/motviation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/motivation"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_button_rem"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/reset_btn_motivation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/button_shape_createprofile"
        android:text="@string/reset"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motivation_slider"
        tools:layout_conversion_absoluteHeight="0dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <com.google.android.material.slider.Slider
        android:id="@+id/motivation_slider"
        android:layout_width="332dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        app:labelBehavior="visible"
        android:stepSize="15"
        android:value="30"
        android:valueFrom="30"
        android:valueTo="180"
        app:haloColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motviation_text"
        app:thumbColor="#FFFFFF"
        app:thumbStrokeColor="#FFFFFF"
        app:tickColor="#FFFFFF"
        app:tickColorActive="#FFFFFF"
        app:tickColorInactive="#FFFFFF"
        app:trackColor="#FFFFFF" />

    <Button
        android:id="@+id/save_btn_stand_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_shape_createprofile"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stand_up_slider"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/stand_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/standup"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_btn_motivation"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/reset_btn_stand_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/button_shape_createprofile"
        android:text="@string/reset"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stand_up_slider"
        tools:layout_conversion_absoluteHeight="0dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <com.google.android.material.slider.Slider
        android:id="@+id/stand_up_slider"
        android:layout_width="332dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        app:labelBehavior="visible"
        android:stepSize="15"
        android:value="60"
        android:valueFrom="30"
        android:valueTo="180"
        app:haloColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stand_up_text"
        app:thumbColor="#FFFFFF"
        app:thumbStrokeColor="#FFFFFF"
        app:tickColor="#FFFFFF"
        app:tickColorActive="#FFFFFF"
        app:tickColorInactive="#FFFFFF"
        app:trackColor="#FFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout>

